# SequenceOTRizer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.h.in  main.cpp
.github/workflows/: generate-builds.yml
ZeldaOTRizer/: CMakeLists.txt  Sequence.cpp  Sequence.h
ZeldaOTRizer/OTRizer/: CMakeLists.txt  Resource.cpp  Resource.h
